--- a/HW1207/12_譚玥湄/CH12.02_Q06.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q06.md
@@ -9,12 +9,17 @@ To construct the ANOVA table for the simple linear regression analysis, we follo
 1. Calculate the regression line:  
    Find the slope ($b_1$) and intercept ($b_0$) using the Method of Least Squares.
    ![image](https://github.com/user-attachments/assets/999e35d6-81d6-419d-a184-173a6ebf420b)
+   ![image](https://github.com/user-attachments/assets/e603cad0-6c83-4b6b-b10f-300857136412)  
+   $\overline{x}$ =0  
+   $\overline{y}$ =3  
+   b1 = 1.2   
+   b0 = $\overline{y}$ − b1 *  $\overline{x}$ =3−(1.2)(0)=3 
 
-2. Compute predicted y-values ($\hat{y}$) and residuals (y− $\hat{y}$).
+3. Compute predicted y-values ($\hat{y}$) and residuals (y− $\hat{y}$).
 ![image](https://github.com/user-attachments/assets/788f8a23-501f-4d3d-9157-5071347044b5)
 
 
-3. Calculate the sums of squares: Total Sum of Squares ($SS_{Total}$), Regression Sum of Squares ($SS_{Regression}$), and Residual Sum of Squares ($SS_{Error}$).!
+4. Calculate the sums of squares: Total Sum of Squares ($SS_{Total}$), Regression Sum of Squares ($SS_{Regression}$), and Residual Sum of Squares ($SS_{Error}$).!
 ![image](https://github.com/user-attachments/assets/c608e140-bcda-4d6a-b6f8-ba83beec2bb3)
 
 N = 總樣本數 5  
@@ -24,7 +29,7 @@ $df_{error}$ = n-k = 3
 $df_{total}$ = $df_{reg}$ + $df_{error}$  = 4 
 
 SSR = 14.4  
-SSE = 1.6
+SSE = 1.6  
 SST = SST + SSR = 14.4 + 1.6 = 16
 
 MSR = SSR / $df_{reg}$ = 14.4 / 1 =14.4  
