--- a/HW1109/12_譚玥湄/CH07.03_Q23.md
+++ b/HW1109/12_譚玥湄/CH07.03_Q23.md
@@ -49,12 +49,12 @@ P(z<-52.5 )= 0
     \text{p-value} \approx 0.005
     \]
 
-2. **比較 p 值與 \(\alpha\)：**
-    - 若 \(\text{p-value} < \alpha = 0.05\)，則拒絕 \(H_0\)。
-    - 因為 \(\text{p-value} = 0.005 < 0.05\)，**拒絕 \(H_0\)**。
+2. **比較 p 值與 \($\alpha$)：**
+    - 若 \($\text{p-value}$ < $\alpha$ = 0.05\)，則拒絕 \($H_0$\)。
+    - 因為 \($\text{p-value}$ = 0.005 < 0.05\)，**拒絕 \($H_0$\)**。
 
 3. **實際意義：**
-    極小的 p 值表示對 \(H_0\) 的強烈反駁。該診所的 3 個月大女嬰的平均體重顯著低於 \(5.86\) 公斤。
+    極小的 p 值表示對 \($H_0$\) 的強烈反駁。該診所的 3 個月大女嬰的平均體重顯著低於 \(5.86\) 公斤。
 
 ---
 
