--- a/HW1207/12_譚玥湄/CH12.02_Q06.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q06.md
@@ -11,7 +11,7 @@ To construct the ANOVA table for the simple linear regression analysis, we follo
    ![image](https://github.com/user-attachments/assets/999e35d6-81d6-419d-a184-173a6ebf420b)
    ![image](https://github.com/user-attachments/assets/e603cad0-6c83-4b6b-b10f-300857136412)
    
-   {/hat{y)$=a+bx  
+   {/hat{y}$ = bx + a
    $\overline{x}$ =0  
    $\overline{y}$ =3  
    b = 1.2   
