--- a/HW1207/10_蔡佳媛/CH12.02_Q06_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.02_Q06_10_Cathy.md
@@ -6,26 +6,32 @@
 
 |       |   1  |   2  |   3  |   4  |   5  | Total | Average |  
 |-------|------|------|------|------|------|-------|---------|  
-|   x   |  -2  |  -1  |   0  |   1  |   2  |   0   |    0    |  
-|   y   |   1  |   1  |   3  |   5  |   5  |   15  |    3    |  
-|  x^2  |   4  |   1  |   0  |   1  |   4  |   10  |    2    |  
-|  y^2  |   1  |   1  |   9  |  25  |  25  |   61  |   12.2  |  
-|   xy  |  -2  |  -1  |   0  |   5  |  10  |   12  |         |
+|  $x$  |  -2  |  -1  |   0  |   1  |   2  |   0   |    0    |  
+|  $y$  |   1  |   1  |   3  |   5  |   5  |   15  |    3    |  
+| $x^2$ |   4  |   1  |   0  |   1  |   4  |   10  |    2    |  
+| $y^2$ |   1  |   1  |   9  |  25  |  25  |   61  |   12.2  |  
+|  $xy$ |  -2  |  -1  |   0  |   5  |  10  |   12  |         |
+
 
 Total SS = $S_{yy} = \sum{{y_{i}}^2} - n {\bar{y}}^2$  
 Total SS = 61 - 5 $\times 3^2$ = 16 
 
-SSR = $\frac{{S_{xy}}^2}{S_{xx}}$  
+$S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2$  
+$S_{xx} = 10 - 5 \times 0 = 10$  
 
-$S_{xy}$
+$S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$  
+$S_{xy} = 12 - 5 \times 0 \times 3 = 12$  
 
+SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{12^2}{10} = 14.4$  
+
+Total SS - SSR = SSE = $16 - 14.4 = 1.6$
 
 
 ### ANOVA table  
 
 |   Source   |      df     |   SS   |   MS   |  
 |------------|-------------|--------|--------|  
-| Regression |       1     |        |        |  
-| Error      | n-2 = **3** |        |        |  
-| Total      | n-1 = **4** | **16** |  
+| Regression |       1     |**14.4**|**14.4**|  
+| Error      | n-2 = **3** | **1.6**|**0.5333**|  
+| Total      | n-1 = **4** |**16**  |  
 
