--- a/HW1207/10_蔡佳媛/CH12.02_Q10_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.02_Q10_10_Cathy.md
@@ -1,2 +1,18 @@
 
 ![image](https://github.com/user-attachments/assets/4e6f3a84-ddb0-4e0a-b05b-e819d9abd4bb)
+
+
+### a. If the researcher thinks that BMI is a function of income, which of the two variables is the independent variable $x$ and which is the dependent variable $y$?
+
+BMI is the independent variable, and income is the dependent vari
+
+
+### b. Find the least-squares line relating BMI to income.
+
+
+
+
+### c. Construct the ANOVA table for the linear regression.
+
+
+
