--- a/HW1207/10_蔡佳媛/CH12.02_Q10_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.02_Q10_10_Cathy.md
@@ -4,7 +4,7 @@
 
 ### a. If the researcher thinks that BMI is a function of income, which of the two variables is the independent variable $x$ and which is the dependent variable $y$?
 
-BMI is the independent variable, and income is the dependent vari
+BMI is the independent variable, and income is the dependent variable.  
 
 
 ### b. Find the least-squares line relating BMI to income.
