--- a/HW1207/12_譚玥湄/CH12.02_Q06.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q06.md
@@ -8,14 +8,17 @@ Method of Least Squares Use the data given in Exercises 6–7 (Exercises 17–18
 To construct the ANOVA table for the simple linear regression analysis, we follow these steps:  
 1. Calculate the regression line:  
    Find the slope ($b_1$) and intercept ($b_0$) using the Method of Least Squares.
-   ![image](https://github.com/user-attachments/assets/999e35d6-81d6-419d-a184-173a6ebf420b)
-   ![image](https://github.com/user-attachments/assets/e603cad0-6c83-4b6b-b10f-300857136412)  
+
+   求 b
+   ![image](https://github.com/user-attachments/assets/ba7247c9-50ed-4f73-a9e5-fca4c116ac83)
+   b = 1.2 
    
-   $\hat{y}$ = bx + a
-   $\overline{x}$ =0  
-   $\overline{y}$ =3  
-   b = 1.2   
-   a = $\overline{y}$ − b1 *  $\overline{x}$ =3−(1.2)(0)=3 
+   求 a
+   - $\overline{x}$ =0  
+   - $\overline{y}$ =3
+   - a = $\overline{y}$ − b1 *  $\overline{x}$ =3−(1.2)(0)=3 
+
+    $\hat{y}$ = bx + a  =  $\hat{y}$ = 1.2x + 3
 
 3. Compute predicted y-values ($\hat{y}$) and residuals (y− $\hat{y}$).  
 ![image](https://github.com/user-attachments/assets/788f8a23-501f-4d3d-9157-5071347044b5)
