--- a/HW1207/12_譚玥湄/CH12.02_Q06.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q06.md
@@ -18,6 +18,7 @@ To construct the ANOVA table for the simple linear regression analysis, we follo
    - $\overline{y}$ =3
    - a = $\overline{y}$ − b1 *  $\overline{x}$ =3−(1.2)(0)=3 
 
+    The least-squares line
     $\hat{y}$ = bx + a  =  $\hat{y}$ = 1.2x + 3
 
 3. Compute predicted y-values ($\hat{y}$) and residuals (y− $\hat{y}$).  
