--- a/HW1207/12_譚玥湄/CH12.02_Q06.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q06.md
@@ -11,15 +11,16 @@ To construct the ANOVA table for the simple linear regression analysis, we follo
 
    求 b  
    ![image](https://github.com/user-attachments/assets/ba7247c9-50ed-4f73-a9e5-fca4c116ac83)  
-   b = 1.2 
+   - b = 1.2 
    
    求 a
    - $\overline{x}$ =0  
    - $\overline{y}$ =3
    - a = $\overline{y}$ − b1 *  $\overline{x}$ =3−(1.2)(0)=3 
 
-    The least-squares line
-    $\hat{y}$ = bx + a  =  $\hat{y}$ = 1.2x + 3
+
+    The least-squares line  
+    - $\hat{y}$ = bx + a  =  $\hat{y}$ = 1.2x + 3
 
 3. Compute predicted y-values ($\hat{y}$) and residuals (y− $\hat{y}$).  
 ![image](https://github.com/user-attachments/assets/788f8a23-501f-4d3d-9157-5071347044b5)
