--- a/HW1207/12_譚玥湄/CH12.02_Q06.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q06.md
@@ -29,18 +29,17 @@ To construct the ANOVA table for the simple linear regression analysis, we follo
 4. Calculate the sums of squares: Total Sum of Squares ($SS_{Total}$), Regression Sum of Squares ($SS_{Regression}$), and Residual Sum of Squares ($SS_{Error}$).!
 ![image](https://github.com/user-attachments/assets/c608e140-bcda-4d6a-b6f8-ba83beec2bb3)
 
-- N = 總樣本數 5  
-- K = 組別數 2  
-- $df_{reg}$ = k-1 = 1  
-- $df_{error}$ = n-k = 3   
-- $df_{total}$ = $df_{reg}$ + $df_{error}$  = 4 
-
-- SSR = 14.4  
-- SSE = 1.6  
-- SST = SST + SSR = 14.4 + 1.6 = 16
-
-- MSR = SSR / $df_{reg}$ = 14.4 / 1 =14.4  
-- MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333  
+- Argument as follows :  
+n = 總樣本數 5   
+k = 組別數 2  
+$df_{reg}$ = k-1 = 1  
+$df_{error}$ = n-k = 3  
+$df_{total}$ = $df_{reg}$ + $df_{error}$  = 4 
+SSR = 14.4  
+SSE = 1.6  
+SST = SST + SSR = 14.4 + 1.6 = 16  
+MSR = SSR / $df_{reg}$ = 14.4 / 1 =14.4  
+MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333  
 
 4. The ANOVA table for the given data points is:
 
