--- a/HW1109/12_譚玥湄/CH07.03_Q23.md
+++ b/HW1109/12_譚玥湄/CH07.03_Q23.md
@@ -15,25 +15,25 @@ c. The average is less than 900.
   $$SEM= \frac{\sigma}{\sqrt{n}}$$    
   $$SEM= \frac{80}{\sqrt{400}} $$ = 4  
 
-Step 2: Standardizing (Z-scores)
+* Step 2: Standardizing (Z-scores)
   For each probability, we calculate the Z-score using the formula:  
   Z-scores = $$\frac{\bar{x} - \mu}{\text{SEM}} $$  
 
 ---
 use Central limit Therem  
-a. The average is between 1100 and 1110.  
+* a. The average is between 1100 and 1110.  
 For $$\bar{x}$$ =1100 : Z-scores = $$\frac{{1100} - 1110}{\text{4}} $$  = -2.5  
 For $$\bar{x}$$ =1110 : Z-scores = $$\frac{{1100} - 1110}{\text{4}} $$  = 0  
 P(-2.5 < z < 0 )  
 P(z<0)−P(z<−2.5) = 0.5 − 0.0062= 0.4938 
 
-b. The average is greater than 1120.  
+* b. The average is greater than 1120.  
 For $$\bar{x}$$ > 1120 : Z-scores = $$\frac{{1120} - 1110}{\text{4}} $$  = 2.5  
 P(z>2.5) =1−P(z<2.5)  
 P(z>2.5) =1−0.9938=0.0062
 
 
-c. The average is less than 900.  
+* c. The average is less than 900.  
 For $$\bar{x}$$ < 900  : Z-scores = $$\frac{{900} - 1110}{\text{4}} $$  = -52.5  
 P(z<-52.5 )= 0 
 
