--- a/HW1109/12_譚玥湄/CH07.03_Q23.md
+++ b/HW1109/12_譚玥湄/CH07.03_Q23.md
@@ -46,7 +46,7 @@ P(z<-52.5 )= 0
     
     使用統計軟體或 \(t\)-表查得：
     \[
-    \text{p-value} \approx 0.005
+    $\text{p-value}$ $\approx$ 0.005
     \]
 
 2. **比較 p 值與 \($\alpha$)：**
