--- a/HW1109/12_譚玥湄/CH07.03_Q30.md
+++ b/HW1109/12_譚玥湄/CH07.03_Q30.md
@@ -1,6 +1,6 @@
 CH07.03_Q30  
 Potassium Levels The amount of potassium in food  varies, but bananas are often associated with high potassium,
-with approximately 422 mg in a medium-sized  banana.8 Suppose the distribution of potassium in a  banana is normally distributed, with mean equal to
+with approximately 422 mg in a medium-sized  banana. Suppose the distribution of potassium in a  banana is normally distributed, with mean equal to
 422 mg and standard deviation equal to 13 mg per banana. You eat n53 bananas per day, and T is the total number of milligrams of potassium you receive from them.  
 
 ---
