--- a/HW1109/12_譚玥湄/CH07.03_Q30.md
+++ b/HW1109/12_譚玥湄/CH07.03_Q30.md
@@ -1,28 +1,28 @@
 CH07.03_Q30  
-Potassium Levels The amount of potassium in food  varies, but bananas are often associated with high potassium,
+**Potassium Levels** : The amount of potassium in food  varies, but bananas are often associated with high potassium,
 with approximately 422 mg in a medium-sized  banana. Suppose the distribution of potassium in a  banana is normally distributed, with mean equal to
-422 mg and standard deviation equal to 13 mg per banana. You eat n53 bananas per day, and T is the total number of milligrams of potassium you receive from them.  
+422 mg and standard deviation equal to 13 mg per banana.  You eat n = 3 bananas per day, and T is the total number of milligrams of potassium you receive from them.  
+a. Find the mean and standard deviation of T.  
+b. Find the probability that your total daily intake of potassium from the three bananas will exceed 1300 mg. 
 
 ---
 Given Information  
-•	Mean potassium per banana (μ): 422mg  
-•	Standard deviation of potassium per banana (σ): 13 mg  
-•	Number of bananas (n): 53
+*Mean potassium per banana (μ): 422mg  
+*Standard deviation of potassium per banana (σ): 13 mg  
+*Number of bananas (n): 3
+* μ(T)= n ⋅ μ 
+* T ~  N( 3 * $$\mu$$ , $$\sqrt{3}$$ * $$\sigma $$ ) 
 
-a. Find the mean and standard deviation of T.  
+-  a. Find the mean and standard deviation of T.  
 The mean of the total potassium (T) is given by:  
-μT=n⋅μ => 53 * 422=22,366mg$$
+μ(T)= n ⋅ μ  =  3 * 422 = 1266 ,  
+The standard deviation of T is:  σ(T) = n ⋅ σ = 3 ⋅ 13 ≈ 22.52mg  
+Thus, T follows a normal distribution:  T∼N(1266, 22.5167)
 
-The standard deviation of T is:  
-σT=n⋅σ=3⋅13≈22.52mg  
-
-Thus, T follows a normal distribution:  
-T∼N(1266, $${22.52^2}$$)T
-
-b. Find the probability that your total daily intake of potassium from the three bananas will exceed 1300 mg.  
+---
+- b. Find the probability that your total daily intake of potassium from the three bananas will exceed 1300 mg.  
 The standard deviation of T is:  
 $$Z = \frac{T - \mu_T}{\sigma_T}$$  
-
-T=1300 into the Z-score formula:  
-$$Z = \frac{1300 - 1266}{22.52}  \approx 1.51 $$  
+T=1300 into the Z-score formula:  $$Z = \frac{1300 - 1266}{22.52}  \approx 1.51 $$  
 Then use a standard normal distribution table to find P(Z>1.51), which would be approximately 0.0655 or 6.55%.
+ 
