--- a/HW1109/12_譚玥湄/CH07.03_Q30.md
+++ b/HW1109/12_譚玥湄/CH07.03_Q30.md
@@ -13,14 +13,16 @@ Given Information
 *μT = n ⋅ μ  
 *T ~  N( 3 * $$\mu$$ , $$\sqrt{3}$$ * $$\sigma $$ )  
 
--  a. Find the mean and standard deviation of T.  
+* a. Find the mean and standard deviation of T.  
 The mean of the total potassium (T) is given by:  
 μ(T)= n ⋅ μ  =  3 * 422 = 1266 ,  
-The standard deviation of T is:  σ(T) = n ⋅ σ = 3 ⋅ 13 ≈ 22.52mg  
-Thus, T follows a normal distribution:  T∼N(1266, 22.5167)
+The standard deviation of T is: 
+σ* $T^2$ = n ⋅ $σ^2$  = 3 * 169 = 507mg  
+σT = $\sqrt{577}$ ≈  22.5167mg  
+Thus, T follows a normal distribution:  T ∼ N(1266, 22.5167)
 
 ---
-- b. Find the probability that your total daily intake of potassium from the three bananas will exceed 1300 mg.  
+* b. Find the probability that your total daily intake of potassium from the three bananas will exceed 1300 mg.  
 The standard deviation of T is:  
 $$Z = \frac{T - \mu_T}{\sigma_T}$$  
 T=1300 into the Z-score formula:  $$Z = \frac{1300 - 1266}{22.52}  \approx 1.51 $$  
