--- a/HW1109/12_譚玥湄/CH08.02_Q25.md
+++ b/HW1109/12_譚玥湄/CH08.02_Q25.md
@@ -28,10 +28,6 @@ Answer ：
 Summary：   
 -	We are 95% confident that the true mean hourly yield lies within the interval [1002.36, 1037.64] grams/hour
 
-In the problem, it is explicitly stated that the observed sample mean is xˉ=1020 grams/hour\bar{x} = 1020 \, 
-This value represents the average of the 100 hourly yields that were randomly observed during the study.
-The sample mean xˉ\bar{x}xˉ serves as the point estimate of the population mean because:
-1.	The sample is a representative subset of the entire population (100 observations were randomly selected).
-2.	The sample mean is the best single estimate of the true population mean in statistical inference.
-So, the estimated mean hourly yield is 1020 grams/hour1020 \, \text{grams/hour}1020grams/hour because that is the average observed value from the sample data.
+
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$ Note that only the point estimate is needed, which means we only require $\mu$ is $\bar{x}=1020$ and margin of error 17.64.
 
