--- a/HW1207/06_陳嘉祥/CH12.01_Q17.md
+++ b/HW1207/06_陳嘉祥/CH12.01_Q17.md
@@ -1,1 +1,5 @@
+---
+Title: HW1207_06_Titan(陳嘉祥)
+---
 
+![CH12 01_Q17](https://github.com/user-attachments/assets/5ea75e49-f018-4341-bc25-f7dc28e2be5b)
