--- a/HW1207/06_陳嘉祥/CH12.01_Q22.md
+++ b/HW1207/06_陳嘉祥/CH12.01_Q22.md
@@ -1,1 +1,6 @@
+---
+Title: HW1207_06_Titan(陳嘉祥)
+---
+
+![CH12 01_Q22](https://github.com/user-attachments/assets/d2d032dc-fc36-4074-86a6-ef3dec417b38)
 
