--- a/HW1207/06_陳嘉祥/CH12.02_Q04.md
+++ b/HW1207/06_陳嘉祥/CH12.02_Q04.md
@@ -1,1 +1,6 @@
+---
+Title: HW1207_06_Titan(陳嘉祥)
+---
+
+![CH12 02_Q04](https://github.com/user-attachments/assets/ad96372b-5285-42b5-a41a-af5fef603ce0)
 
