--- a/HW1207/06_陳嘉祥/CH12.02_Q06.md
+++ b/HW1207/06_陳嘉祥/CH12.02_Q06.md
@@ -1,1 +1,5 @@
+---
+Title: HW1207_06_Titan(陳嘉祥)
+---
 
+![CH12 02_Q06](https://github.com/user-attachments/assets/2d3b7b91-e913-4e11-858f-5795a468fc97)
