--- a/HW1207/06_陳嘉祥/CH12.02_Q10.md
+++ b/HW1207/06_陳嘉祥/CH12.02_Q10.md
@@ -1,1 +1,6 @@
+---
+Title: HW1207_06_Titan(陳嘉祥)
+---
+
+![CH12 02_Q10](https://github.com/user-attachments/assets/59b6f85c-9540-4fa6-bfc2-57657ceb5ad8)
 
