--- a/HW1207/06_陳嘉祥/CH12.02_Q16.md
+++ b/HW1207/06_陳嘉祥/CH12.02_Q16.md
@@ -1,1 +1,6 @@
+---
+Title: HW1207_06_Titan(陳嘉祥)
+---
+
+![CH12 02_Q16](https://github.com/user-attachments/assets/e9fcb388-6c4b-42e6-8446-1cfc9124fecd)
 
