--- a/HW1207/06_陳嘉祥/CH12.03_Q05.md
+++ b/HW1207/06_陳嘉祥/CH12.03_Q05.md
@@ -1,1 +1,6 @@
+---
+Title: HW1207_06_Titan(陳嘉祥)
+---
+
+![CH12 03_Q05](https://github.com/user-attachments/assets/dab3d874-efe3-4967-803d-74a6f76a7c2a)
 
