--- a/HW1207/06_陳嘉祥/CH12.03_Q07.md
+++ b/HW1207/06_陳嘉祥/CH12.03_Q07.md
@@ -1,1 +1,6 @@
+---
+Title: HW1207_06_Titan(陳嘉祥)
+---
+
+![CH12 03_Q07](https://github.com/user-attachments/assets/293feff8-cb80-4469-8455-ce11527dcc3c)
 
