--- a/HW1207/06_陳嘉祥/CH12.03_Q09.md
+++ b/HW1207/06_陳嘉祥/CH12.03_Q09.md
@@ -1,1 +1,6 @@
+---
+Title: HW1207_06_Titan(陳嘉祥)
+---
+
+![CH12 03_Q09](https://github.com/user-attachments/assets/20e955dc-2aa7-4df6-908f-e4545fe1f8f0)
 
