--- a/HW1207/06_陳嘉祥/CH12.05_Q03&05.md
+++ b/HW1207/06_陳嘉祥/CH12.05_Q03&05.md
@@ -1,1 +1,6 @@
+---
+Title: HW1207_06_Titan(陳嘉祥)
+---
+
+![CH12 05_Q03 05](https://github.com/user-attachments/assets/1424f79f-7ef8-454f-88a0-d11c4926a58d)
 
