--- a/HW1207/06_陳嘉祥/CH12.05_Q07&08.md
+++ b/HW1207/06_陳嘉祥/CH12.05_Q07&08.md
@@ -1,1 +1,6 @@
+---
+Title: HW1207_06_Titan(陳嘉祥)
+---
+
+![CH12 05_Q07 08](https://github.com/user-attachments/assets/57857079-7d8b-4355-b787-63994272f908)
 
