--- a/HW1207/06_陳嘉祥/CH12.05_Q09&10.md
+++ b/HW1207/06_陳嘉祥/CH12.05_Q09&10.md
@@ -1,1 +1,6 @@
+---
+Title: HW1207_06_Titan(陳嘉祥)
+---
+
+![CH12 05_Q09 10](https://github.com/user-attachments/assets/d6cbc87d-4d99-41cd-95f2-db0a740f67e2)
 
