--- a/HW1207/09_沈佩如/CH12.02_Q06.md
+++ b/HW1207/09_沈佩如/CH12.02_Q06.md
@@ -51,3 +51,6 @@ SSE = SST - SSR = 1.6
 MSR = SSR / $df_{reg}$ = 14.4 / 1 =14.4
 
 MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333
+
+![image](https://github.com/user-attachments/assets/ed5c32c0-4397-41f9-8774-57405f2e48d7)
+
