--- a/HW1207/09_沈佩如/CH12.02_Q06.md
+++ b/HW1207/09_沈佩如/CH12.02_Q06.md
@@ -41,13 +41,13 @@ $df_{total}$ = n-1 = 4
 >$S_{xx} = \sum {x^2} - \frac{(\sum{x})^2}{n} = 10 - \frac{(0)^2}{5} = 10 $
 >
 >$S_{xy} = \sum {xy} - \frac{\sum{x}\sum{y}}{n} = 12 - \frac{(0)(15)}{5} = 12 $
-   
-SST = $S_{yy} = \sum {y^2} - \frac{(\sum{y})^2}{n} = 61 - \frac{(15)^2}{5} = 16 $ 
-
-SSR = $S_{xy}^2$ / $S_{xx}$ = $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  59.4 - $15^2$ / 5 = 14.4
-
-SSE = SST - SSR = 1.6
-
+>   
+>SST = $S_{yy} = \sum {y^2} - \frac{(\sum{y})^2}{n} = 61 - \frac{(15)^2}{5} = 16 $ 
+>
+>SSR = $\frac{S_{xy}^2}{S_{xx}}$ = $\frac{12^2}{10}$ = 14.4
+>
+>SSE = SST - SSR = 16 - 14.4 = 1.6
+>
 MSR = SSR / $df_{reg}$ = 14.4 / 1 =14.4
 
 MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333
