--- a/HW1207/09_沈佩如/CH12.02_Q06.md
+++ b/HW1207/09_沈佩如/CH12.02_Q06.md
@@ -48,9 +48,12 @@ $df_{total}$ = n-1 = 4
 >
 >SSE = SST - SSR = 16 - 14.4 = 1.6
 >
-MSR = SSR / $df_{reg}$ = 14.4 / 1 =14.4
-
-MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333
+>MSR = $\frac{SSR} {df_{reg}}$ = 14.4 / 1 = 14.4
+>
+>MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333
 
 ![image](https://github.com/user-attachments/assets/ed5c32c0-4397-41f9-8774-57405f2e48d7)
+
+![image](https://github.com/user-attachments/assets/6c035b85-fd32-447f-bdeb-1738a6d51e3d)
+
 
