--- a/HW1207/HW1207Q11.md
+++ b/HW1207/HW1207Q11.md
@@ -1,4 +1,4 @@
-8# **CH12.05_Q3.Q5** $\textcolor{orange}{黃家鈞}$
+**CH12.05_Q3.Q5** $\textcolor{orange}{黃家鈞}$
 
 ![image](https://github.com/user-attachments/assets/e408d551-5732-41c3-a89b-d8ffa02ce67b)
 
