--- a/HW1109/HW1109Q03.md
+++ b/HW1109/HW1109Q03.md
@@ -24,3 +24,4 @@ E( $$\bar{x}$$ ) = (10 * 1/16 + 12.5 * 1/8 +15 * 1/16 + 15.5 * 1/8 + 16 * 1/8 + 
 這些樣本平均數E( $$\bar{x}$$ )和母體平均數 $$\mu$$ 相比，無論抽樣後不放回或者抽樣後放回，都和母體平均數 $$\mu$$ 相同，為17。
 
 reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 90}}$ (b) $E(\bar{x} ) = \frac{12.5+15.5+\cdots+21.5+10+15+21+22}{10}=17$
+reviewed by 黃馨霈 20241211 $\textbf{\textcolor{red}{score: 100}}$
