--- a/HW1207/09_沈佩如/CH12.02_Q06.md
+++ b/HW1207/09_沈佩如/CH12.02_Q06.md
@@ -11,19 +11,13 @@
 >| Tatol | 4     | 16 |
 >
 計算過程如下：
-
-1.整理資料
-
-![image](https://github.com/user-attachments/assets/2a5b7a19-a2b1-4117-b5c0-d5c9e150afef)
-
-2.試算各格
-
-$df_{reg}$ = 1
-
-$df_{error}$ = n-k = 3
-
-$df_{total}$ = n-1 = 4
-
+>
+>$df_{reg}$ = 1
+>
+>$df_{error}$ = n-k = 3
+>
+>$df_{total}$ = n-1 = 4
+>
 >$\sum x = (-2)+(-1) + 0 + 1 + 2 = 0 $
 >
 >$\sum y = 1 + 1 + 3 + 5 + 5 = 15 $
@@ -48,9 +42,9 @@ $df_{total}$ = n-1 = 4
 >
 >SSE = SST - SSR = 16 - 14.4 = 1.6
 >
->MSR = $\frac{SSR} {df_{reg}}$ = 14.4 / 1 = 14.4
+>MSR = $\frac{SSR} {df_{reg}}$ = $\frac{14.4}{1}$ = 14.4
 >
->MSE = SSE / $df_{error}$ = 1.6 / 3 = 0.5333
+>MSE = $\frac{SSE}{df_{error}}$ = $\frac{1.6}{3}$ = 0.5333
 
 ![image](https://github.com/user-attachments/assets/ed5c32c0-4397-41f9-8774-57405f2e48d7)
 
