--- a/HW1207/09_沈佩如/CH12.02_Q10.md
+++ b/HW1207/09_沈佩如/CH12.02_Q10.md
@@ -2,4 +2,46 @@
 
 ![image](https://github.com/user-attachments/assets/3965e030-a5b4-4d24-8cb1-1c180c515ac8)
 
-## 由題目得知：
+## 由題目得知：一項使用身體質量指數（BMI）作為肥胖指標的研究，探討了 BMI 與收入（單位：千美元）之間的關係，並提供了 2016 年加州的數據如下：
+
+|Income       |	15	| 20.5|	30  |	40  |	60  |	75  |
+|-------------|-----|-----|-----|-----|-----|-----|
+|BMI          |	31.2|	29.3|	27.4|	27.3|	26.8|	20.0|
+
+## 問題a. 如果研究者認為 BMI 是收入的函數，這兩個變數中哪個是自變數 x，哪個是依變數 y？
+>
+>自變數x收入，依變數y為BMI
+
+## 問題b. 找出描述 BMI 與收入之間關係的最小平方法直線。
+					
+
+
+
+
+Sxx = 2730.208 ， Sxy = -402.85 ，得 b = -0.1476 a= 32.9144 
+
+least-square line: $\hat{y}$ = 32.9144 - 0.1476 *x
+
+## 問題c. 建構這個線性回歸的 ANOVA 表格。
+
+|       | DF    | SS | MS |
+| ----  | --    | -- | -- |
+| Reg   | 1     | 59.4417  | 59.4417  |
+| Error | 4     | 12.7783 |3.1946  |
+| Tatol | 5     | 72.22 |
+
+$df_{reg}$ = 1
+
+$df_{error}$ = n-k = 4
+
+$df_{total}$ = n-1 = 5
+   
+SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 72.22
+
+SSR = $S_{xx}$ = $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 59.4417
+
+SSE = SST - SSR = 72.22-59.4417 = 12.7783
+
+MSR = SSR / $df_{reg}$ = 59.4417 /1 =59.4417
+
+MSE = SSE / $df_{error}$ = 12.7783 / 4 = 3.1946
