--- a/HW1207/09_沈佩如/CH12.02_Q10.md
+++ b/HW1207/09_沈佩如/CH12.02_Q10.md
@@ -13,7 +13,30 @@
 >自變數x收入，依變數y為BMI
 
 ## 問題b. 找出描述 BMI 與收入之間關係的最小平方法直線。
-					
+
+>$\sum x = 15 + 20.5 + 30 + 40 + 60 + 75  = 240.5 $
+>
+>$\sum y = 1 + 1 + 3 + 5 + 5 = 15 $
+>
+>$\sum {x^2} = (-2)^2 +(-1)^2 + 0^2 + 1^2 + 2^2 = 10 $
+>
+>$\sum {y^2} = 1^2 + 1^2 + 3^2 + 5^2 + 5^2 = 61 $
+>
+>$\sum xy = (-2)(1) + (-1)(1) + (0)(3) + (1)(5) + (2)(5) = 12 $
+>
+>$\bar{x} = \frac{(-2)+(-1)+0+1+2}{5} = 0 $
+>
+>$\bar{y} = \frac{1+1+3+5+5}{5} = 3 $
+>
+>$S_{xx} = \sum {x^2} - \frac{(\sum{x})^2}{n} = 10 - \frac{(0)^2}{5} = 10 $
+>
+>$S_{xy} = \sum {xy} - \frac{\sum{x}\sum{y}}{n} = 12 - \frac{(0)(15)}{5} = 12 $
+>
+>斜率: $$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2 $$   							
+>							
+>截距: $$a= \bar{y}-b*\bar{x} = 3 - (1.2)(0) = 3 $$							
+>						
+>least-square line : $$\hat{y} = 3 + 1.2x $$
 
 
 
