--- a/HW1207/09_沈佩如/CH12.02_Q10.md
+++ b/HW1207/09_沈佩如/CH12.02_Q10.md
@@ -16,7 +16,7 @@
 
 >$\sum x = 15 + 20.5 + 30 + 40 + 60 + 75  = 240.5 $
 >
->$\sum y = 1 + 1 + 3 + 5 + 5 = 15 $
+>$\sum y = 31.2 + 29.3 + 27.4 + 27.3 + 26.8 + 20 = 162 $
 >
 >$\sum {x^2} = (-2)^2 +(-1)^2 + 0^2 + 1^2 + 2^2 = 10 $
 >
