--- a/HW1207/13_陳峻毅/CH12.01_Q17.md
+++ b/HW1207/13_陳峻毅/CH12.01_Q17.md
@@ -1,1 +1,57 @@
+![圖片](https://github.com/user-attachments/assets/298be4c5-a3a1-4515-b834-033a700d569c)
 
+# 最小平方法解答
+## 1. 計算 $S_{xx}$ 和 $S_{xy}$
+
+給定數據：
+- $x$: $-2, -1, 0, 1, 2$
+- $y$: $1, 1, 3, 5, 5$
+
+### 公式
+1. $S_{xx} = \sum x_i^2 - \frac{(\sum x_i)^2}{n}$
+2. $S_{xy} = \sum x_i y_i - \frac{\sum x_i \sum y_i}{n}$
+
+### 計算步驟
+| $x$  | $y$  | $x^2$ | $x \cdot y$ |
+|------|------|-------|-------------|
+| -2   | 1    | 4     | -2          |
+| -1   | 1    | 1     | -1          |
+| 0    | 3    | 0     | 0           |
+| 1    | 5    | 1     | 5           |
+| 2    | 5    | 4     | 10          |
+| **合計** | **** | **10**  | **12**         |
+
+計算總和：
+$sum x_i = (-2) + (-1) + 0 + 1 + 2 = 0$\
+$sum y_i = 1 + 1 + 3 + 5 + 5 = 15 $\
+$sum x_i^2 = 4 + 1 + 0 + 1 + 4 = 10 $\
+$sum _i y_i = -2 + (-1) + 0 + 5 + 10 = 12 $
+
+#### 計算 $S_{xx}$：
+$S_{xx} = \sum x_i^2 - \frac{(\sum x_i)^2}{n} = 10 - \frac{(0)^2}{5} = 10 $
+
+#### 計算 $S_{xy}$：
+$S_{xy} = \sum x_i y_i - \frac{\sum x_i \sum y_i}{n} = 12 - \frac{0 \cdot 15}{5} = 12 $
+
+---
+
+## 2. 求最小平方線方程式
+最小平方線方程式為：
+y = a + bx
+
+其中：
+$b = \frac{S_{xy}}{S_{xx}}, \quad a = \bar{y} - b\bar{x}$
+
+#### 計算 $b$：
+$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2$
+
+#### 計算 $a$：
+$\bar{x} = \frac{\sum x_i}{n} = \frac{0}{5} = 0$
+$\bar{y} = \frac{\sum y_i}{n} = \frac{15}{5} = 3$
+$a = \bar{y} - b\bar{x} = 3 - (1.2 \cdot 0) = 3$
+
+因此，最小平方線為：
+y = 3 + 1.2x
+---
+## 3. 繪圖
+![c4330c1f-f943-4370-bb0d-618011024823](https://github.com/user-attachments/assets/2bc08ab1-68ca-46bb-93ee-456845bdb647)
