--- a/HW1207/12_譚玥湄/CH12.01_Q22.md
+++ b/HW1207/12_譚玥湄/CH12.01_Q22.md
@@ -1,3 +1,7 @@
-![image](https://github.com/user-attachments/assets/22572fb6-ae1c-47b1-b166-ec5951820a9e)
-![image](https://github.com/user-attachments/assets/0a547329-9373-402b-a52e-89e44d894add)
+![image](https://github.com/user-attachments/assets/22572fb6-ae1c-47b1-b166-ec5951820a9e) ![image](https://github.com/user-attachments/assets/c1c5e8c4-b7a0-44dc-a992-c2c3df971968)
+![image](https://github.com/user-attachments/assets/dfb9a939-6d57-4668-99f0-c5b2fa1e0a52)
 
+a. Draw a scatterplot for armspan and height. Use the same scale on both the horizontal and vertical axes. Describe the relationship between the two variables.
+b. If da Vinci is correct, and a person’s armspan is roughly the same as the person’s height, what should the slope of the regression line be?
+c. Calculate the regression line for predicting height based on a person’s armspan. Does the value of the slope b confirm your conclusions in part b?
+d. If a person has an armspan of 157 centimeters, what would you predict the person’s height to be?
