--- a/HW1207/13_陳峻毅/CH12.01_Q22.md
+++ b/HW1207/13_陳峻毅/CH12.01_Q22.md
@@ -1,1 +1,47 @@
+![圖片](https://github.com/user-attachments/assets/b73d5515-31de-4ca9-8abb-c2b9b50f0973)
 
+### (a) 繪製散佈圖
+上圖展示臂展 (Armspan) 與身高 (Height) 的散佈圖，並繪製出迴歸線。
+### (b) 計算斜率 $b$
+公式：
+$b = \frac{S_{xy}}{S_{xx}}$
+
+其中：
+$S_{xx} = \sum x_i^2 - \frac{(\sum x_i)^2}{n}, \quad S_{xy} = \sum x_i y_i - \frac{\sum x_i \sum y_i}{n}$
+
+計算結果：
+- $S_{xx} = 568.0$
+- $S_{xy} = 468.0$
+
+因此，斜率為：
+$b = \frac{468.0}{568.0} \approx 0.824$ 
+
+---
+### (c) 建立迴歸方程式
+
+迴歸線的方程式為：
+y = a + bx
+
+其中：
+$a = \bar{y} - b\bar{x}$
+
+計算：
+- $\bar{x}$ 和 $\bar{y}$ 分別為臂展與身高的平均值。
+- 截距 a：
+- a = 29.60
+
+因此，迴歸方程式為：
+y = 29.60 + 0.824x
+此結果表明臂展每增加 1 公分，身高約增加 0.824 公分，與 (b) 的結論一致。
+---
+
+### (d) 預測
+使用迴歸方程式：
+y = 29.60 + 0.824x
+
+當臂展 x = 157 時，預測的身高為：
+$y = 29.60 + 0.824 \cdot 157 \approx 158.96 \, \text{cm}$
+---
+### (e) 結論
+- 散佈圖顯示臂展與身高呈現正相關。
+- 迴歸方程式可以有效預測身高。
