--- a/HW1207/13_陳峻毅/CH12.02_Q04.md
+++ b/HW1207/13_陳峻毅/CH12.02_Q04.md
@@ -1,1 +1,38 @@
+![圖片](https://github.com/user-attachments/assets/76d217e2-a601-456c-a162-d84e69841c07)
+## 已知條件
+- 總自由度 $df_{total} = 19$ （因為樣本數 n = 20，即 n - 1）
+- 總平方和 $SS_{total} = 12.5$
+- 迴歸平方和 $SS_{regression} = 4.3$
+---
+## 計算步驟
+### 1. 計算自由度 (df)
+- 迴歸自由度：
+  $df_{regression} = 1$ （簡單線性迴歸中有 1 個自變數）
+- 誤差自由度：
+  $df_{error} = df_{total} - df_{regression} = 19 - 1 = 18$
 
+### 2. 計算誤差平方和 ($SS_{error}$)
+$SS_{error} = SS_{total} - SS_{regression} = 12.5 - 4.3 = 8.2$
+
+### 3. 計算均方 (MS)
+- 迴歸均方：
+  $MS_{regression} = \frac{SS_{regression}}{df_{regression}} = \frac{4.3}{1} = 4.3$
+- 誤差均方：
+  $MS_{error} = \frac{SS_{error}}{df_{error}} = \frac{8.2}{18} \approx 0.456$
+
+---
+
+## 完整的方差分析表
+
+| Source      | $df$ | $SS$  | $MS$   |
+|-------------|------|-------|--------|
+| Regression  | 1    | 4.3   | 4.3    |
+| Error       | 18   | 8.2   | 0.456  |
+| Total       | 19   | 12.5  | —      |
+
+---
+
+## 結論
+
+- 迴歸平方和 $SS_{regression}$ 為 4.3，自由度為 1，均方 $MS_{regression}$ 同樣為 4.3。
+- 誤差平方和 $SS_{error}$ 為 8.2，自由度為 18，均方 $MS_{error}$ 約為 0.456。
