--- a/HW1109/12_譚玥湄/CH07.05_Q27.md
+++ b/HW1109/12_譚玥湄/CH07.05_Q27.md
@@ -1,6 +1,6 @@
 CH07.05_Q27  
 Tossing Coins A fair coin is tossed n = 80 times. Let ˆp be the sample proportion of heads.  
-Find P(.44 , pˆ , .61).
+Find P(.44 , $\hat{p}$ , .61).
 
 ---
 Step 1: Identify the mean and standard deviation of $$\hat{p}$$  
@@ -8,8 +8,8 @@ For a fair coin:
 •	Population proportion (p): 0.5  
 •	Sample size (n): 80  
 
-The standard deviation of $$\hat{p}$$ is given by:  
-•	 $$\sigma_{\hat{p}} = \sqrt{\frac{p(1 - p)}{n}}$$  
+The standard deviation of $\hat{p}$ is given by:  
+•	 $$\sigma_{\hat{p}} = \sqrt{\frac{p(1 - p)}{n}}$  
 
 •	 $$\sigma_{\hat{p}} = \sqrt{\frac{0.5(1 - 0.5)}{80}} = \sqrt{\frac{0.25}{80}} = \sqrt{0.003125} \approx 0.0559$$
   
