--- a/HW1109/12_譚玥湄/CH07.05_Q27.md
+++ b/HW1109/12_譚玥湄/CH07.05_Q27.md
@@ -8,9 +8,19 @@ For a fair coin:
 •	Population proportion (p): 0.5  
 •	Sample size (n): 80  
 
-The standard deviation of $\hat{p}$ is given by:  
-•	 $$\sigma_{\hat{p}} = \sqrt{\frac{p(1 - p)}{n}}$  
-
-•	 $$\sigma_{\hat{p}} = \sqrt{\frac{0.5(1 - 0.5)}{80}} = \sqrt{\frac{0.25}{80}} = \sqrt{0.003125} \approx 0.0559$$
-  
-•	 $${\hat{p}} = 0.5,μp^=0.5,σp^≈0.0559 $$
+## X~Binomial (n=80 , p=0.5)
+#### 1. 根據中央極限定理 $\frac{\hat{p}-p}{\sqrt{p \times q/n}} \rightarrow^d N ( 0,1)$
+>### $P (0.44 < \hat{p} < 0.61 )$
+>
+>### $= P ( \frac{0.44-0.5}{\sqrt{0.5 \times 0.5/80}} < \frac{\hat{p}-0.5}{\sqrt{0.5 \times 0.5/80}} < \frac{0.61-0.5}{\sqrt{0.5 \times 0.5/80}} )$
+>
+>### $= P ( \frac{0.44-0.5}{\sqrt{0.5 \times 0.5/80}} < Z < \frac{0.61-0.5}{\sqrt{0.5 \times 0.5/80}} )$
+>
+>### $= P ( -1.07 < Z < 1.96 )$
+>
+#### 2. 查表
+>
+>### P ( Z < -1.07 ) = 0.1423
+>### P ( Z < 1.96 ) = 0.975
+>### P ( Z < -1.07 ) = 0.1423
+>
