--- a/HW1109/12_譚玥湄/CH07.05_Q27.md
+++ b/HW1109/12_譚玥湄/CH07.05_Q27.md
@@ -3,7 +3,7 @@ Tossing Coins A fair coin is tossed n = 80 times. Let ˆp be the sample proporti
 Find P(.44 , $\hat{p}$ , .61).
 
 ---
-Step 1: Identify the mean and standard deviation of $$\hat{p}$$  
+Identify the mean and standard deviation of $$\hat{p}$$  
 For a fair coin:  
 •	Population proportion (p): 0.5  
 •	Sample size (n): 80  
@@ -11,16 +11,14 @@ For a fair coin:
 ## X~Binomial (n=80 , p=0.5)
 #### 1. 根據中央極限定理 $\frac{\hat{p}-p}{\sqrt{p \times q/n}} \rightarrow^d N ( 0,1)$
 >### $P (0.44 < \hat{p} < 0.61 )$
->
->### $= P ( \frac{0.44-0.5}{\sqrt{0.5 \times 0.5/80}} < \frac{\hat{p}-0.5}{\sqrt{0.5 \times 0.5/80}} < \frac{0.61-0.5}{\sqrt{0.5 \times 0.5/80}} )$
->
->### $= P ( \frac{0.44-0.5}{\sqrt{0.5 \times 0.5/80}} < Z < \frac{0.61-0.5}{\sqrt{0.5 \times 0.5/80}} )$
->
->### $= P ( -1.07 < Z < 1.96 )$
->
+>  
+> $= P ( \frac{0.44-0.5}{\sqrt{0.5 \times 0.5/80}} < \frac{\hat{p}-0.5}{\sqrt{0.5 \times 0.5/80}} < \frac{0.61-0.5}{\sqrt{0.5 \times 0.5/80}} )$  
+> $= P ( \frac{0.44-0.5}{\sqrt{0.5 \times 0.5/80}} < Z < \frac{0.61-0.5}{\sqrt{0.5 \times 0.5/80}} )$  
+> $= P ( -1.07 < Z < 1.96 )$  
+>  
 #### 2. 查表
 >
->### P ( Z < -1.07 ) = 0.1423
->### P ( Z < 1.96 ) = 0.975
->### P ( Z < -1.07 ) = 0.1423
+> P ( Z < -1.07 ) = 0.1423  
+> P ( Z < 1.96 ) = 0.975  
+> P ( Z < -1.07 ) = 0.1423  
 >
