--- a/HW1109/12_譚玥湄/CH07.05_Q31.md
+++ b/HW1109/12_譚玥湄/CH07.05_Q31.md
@@ -7,16 +7,16 @@ Population proportion (𝑝): 0.47
 Sample size (𝑛=100)
 
 ---
-a. Does the distribution of ˆp, the sample proportion of Americans who associate “recycling” with Earth  
+a. Does the distribution of  $\hat{p}$ , the sample proportion of Americans who associate “recycling” with Earth  
 Day, have an approximate normal distribution? If so, what is its mean and standard deviation?  
 
-The sampling distribution of $$\hat{p}$$  is approximately normal if the conditions n⋅p≥10  and n⋅(1−p)≥10 are satisfied.
+The sampling distribution of $\hat{p}$  is approximately normal if the conditions n⋅p≥10  and n⋅(1−p)≥10 are satisfied.
 
 Check Conditions:
 - n⋅p=5100⋅0.47=2397(≥10)
 - n⋅(1−p)=5100⋅(1−0.47)=5100⋅0.53=2703(≥10)
 
-The mean of $$\hat{p}$$ is:  
+The mean of $\hat{p}$ is:  
 $$\mu_{\hat{p}} = p = 0.47$$ 
 
 The standard deviation of $$\hat{p}$$ is:  
