--- a/HW1123/12_譚玥湄/CH09.04_Q11.md
+++ b/HW1123/12_譚玥湄/CH09.04_Q11.md
@@ -7,33 +7,80 @@ d. Find the p-value for the test and interpret it.
 
 ---
 We are testing whether a screening program has increased the survival rate (p) of women diagnosed with early-stage breast cancer. Here’s the solution step-by-step:
-________________________________________
-Part (a): State the Alternative Hypothesis
-The alternative hypothesis reflects the claim that the survival rate (p) has increased due to the screening program. Since historically p=13=0.333, the alternative hypothesis is:
-Ha:p>0.333
-________________________________________
-Part (b): State the Null Hypothesis
+
+---
+### a. State the Alternative Hypothesis
+The alternative hypothesis reflects the claim that the survival rate (p) has increased due to the screening program. the alternative hypothesis is:
+$H_a$ :  P> $\frac{2}{3}$=0.6667
+
+### b: State the Null Hypothesis
 The null hypothesis assumes no effect from the screening program, meaning the survival rate remains the same as the historical rate:
-H0:p=0.333
-________________________________________
-Part (c): Conduct the Hypothesis Test
+$H_0$: P = $\frac{2}{3}$=0.6667  
+
+### c. 如果在樣本中有 164 名女性生存，是否可以得出篩查計劃有效的結論？使用 α=0.05 進行檢驗，並解釋檢驗的實際結論。
+
+所以我們要進行單尾檢定，檢驗 $H_0$ 是否成立。
+已知條件，樣本資訊：
+o	樣本大小 n=200
+o	樣本存活數 x=164
+o	樣本存活率 $\hat{p} = \frac{x}{n} = \frac{164}{200} = 0.82$
+o	原假設效果下的存活率 $P_0$= 0.6667
+
+### c: Conduct the Hypothesis Test
 To test if the screening program is effective, we use a one-tailed z-test for a population proportion. The test statistic is given by:
 z=p^−p0p0(1−p0)nz = \frac{\hat{p} - p_0}{\sqrt{\frac{p_0(1 - p_0)}{n}}}z=np0(1−p0)p^−p0
-Where:
-•	p^=xn=164200=0.82\hat{p} = \frac{x}{n} = \frac{164}{200} = 0.82p^=nx=200164=0.82 (sample proportion),
-•	p0=0.333 (population proportion under H0H_0H0),
-•	n=200 (sample size).
-Step 1: Calculate the Standard Error
-SE=p0(1−p0)n=0.333(1−0.333)200=0.333⋅0.667200≈0.0335SE = \sqrt{\frac{p_0 (1 - p_0)}{n}} = \sqrt{\frac{0.333 (1 - 0.333)}{200}} = \sqrt{\frac{0.333 \cdot 0.667}{200}} \approx 0.0335SE=np0(1−p0)=2000.333(1−0.333)=2000.333⋅0.667≈0.0335
-Step 2: Compute the Test Statistic
-z=p^−p0SE=0.82−0.3330.0335≈0.4870.0335≈14.54z = \frac{\hat{p} - p_0}{SE} = \frac{0.82 - 0.333}{0.0335} \approx \frac{0.487}{0.0335} \approx 14.54z=SEp^−p0=0.03350.82−0.333≈0.03350.487≈14.54
-Step 3: Find the Critical Value
-For a one-tailed test at α=0.05\alpha = 0.05α=0.05, the critical zzz-value is:
-z∗=1.645z^* = 1.645z∗=1.645
-Step 4: Compare Test Statistic and Critical Value
-Since z=14.54>1.645, we reject H0H_0H0.
-Conclusion:
-There is strong evidence that the screening program has increased the survival rate of women diagnosed with early-stage breast cancer.
+所以我們要進行單尾檢定，檢驗 $H_0$ 是否成立。
+已知條件，樣本資訊：
+o	樣本大小 n=200
+o	樣本存活數 x=164
+o	樣本存活率 $\hat{p} = \frac{x}{n} = \frac{164}{200} = 0.82$
+o	原假設效果下的存活率 $P_0$= 0.6667
+
+
+### 檢定的流程
+### 1. 計算檢定統計量Z
+我們使用標準化公式計算檢定統計量:  $Z_{STAT}$ = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$
+將數據代入公式： Z*= $$\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$$ = 4.599 ${\approx}$ 4.6
+
+### 2. 確定臨界值
+檢定類型是 單尾檢定（右尾檢定）
+單尾檢定的顯著水準 α=0.05，對應的標準常態分布臨界值為 $𝑧_𝛼$=1.645。
+
+### 3. 判斷檢定結果
+我們比較檢定統計量 𝑧*=4.60 與臨界值 $𝑧_𝛼$=1.645：
+ 𝑧*=4.60 > $𝑧_𝛼$=1.645
+
+ 因為 𝑧超過了臨界值，我們拒絕 $H_0$
+​
+### 4.檢定結論：
+在significance level 顯著水準 $\alpha = 0.05$下，因為 𝑧*=4.60 > $𝑧_𝛼$=1.645，拒絕 $H_0$，落在拒絕域內。所以我們認為檢測計畫有效，提高了存活率。
+
+![image](https://github.com/user-attachments/assets/58127144-da30-47b5-b697-3dfebf25ae36)
+
+### d. 計算檢驗的 p-value 並解釋其含義
+
+### 1. 計算檢定統計量Z
+我們使用標準化公式計算檢定統計量:  $Z_{STAT}$ = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}}$$
+將數據代入公式： Z*= $$\frac{0.82-0.6667}{\sqrt{\frac{0.6667*0.3333}{200}}}$$ = 4.599 ${\approx}$ 4.6
+
+### 2.計算p-value
+計算右尾的累積機率 P(𝑍>4.60)。
+p-value=1−P(Z≤4.60)
+
+步驟：
+### 1.查找 𝑍*=4.60的累積機率 𝑃(𝑍≤4.60)。
+P(Z≤4.60)≈0.999997
+
+### 2.計算右尾累積機率：
+p-value=1−0.999997=0.000003 < α=0.05 
+
+### 3.檢定結論：
+P 值 ≈0.000003 是一個極小的值，
+因此在significance level 顯著水準 $\alpha = 0.05$下, 拒絕 $H_0$，所以我們認為檢測計畫有效，提高了存活率。
+
+reviewed by 黃馨霈 20241209 $\textbf{\textcolor{red}{score: 100}}$
+•	Conclusion: Reject H0H_0H0. The screening program significantly improves the survival rate of women diagnosed with early-stage breast cancer.
+
 ________________________________________
 Part (d): Find the p-value
 The p-value is the probability of observing a test statistic as extreme or more extreme than the one computed, assuming H0H_0H0 is true. For z=14.54, the p-value is virtually 000 (approaches 10−4710^{-47}10−47), which is far smaller than α=0.05\alpha = 0.05α=0.05.
@@ -45,5 +92,9 @@ Summary of Results:
 •	Test statistic: z=14.54.
 •	Critical value: z∗=1.645.
 •	P-value: Approaches 000.
-•	Conclusion: Reject H0H_0H0. The screening program significantly improves the survival rate of women diagnosed with early-stage breast cancer.
+
+
+
+
+
 
