--- a/HW1109/12_譚玥湄/CH07.05_Q27.md
+++ b/HW1109/12_譚玥湄/CH07.05_Q27.md
@@ -17,5 +17,8 @@ For a fair coin:
 >  
 #### 2. 查表  
 > P ( Z < -1.07 ) = 0.1423  
-> P ( Z < 1.96 ) = 0.975  
-> P ( Z < -1.07 ) = 0.1423  
+> P ( Z < 1.96 ) = 0.975
+
+### 3. 結論
+>### $區間 0.44 < \hat{p} < 0.61 的機率為$
+>### $P (0.44 < \hat{p} < 0.61 ) = 0.975 - 0.1423 = 0.8327$
