--- a/HW1207/12_譚玥湄/CH12.01_Q07.md
+++ b/HW1207/12_譚玥湄/CH12.01_Q07.md
@@ -1,5 +1,5 @@
 Review: More Straight Lines Give the equation and graph for a line with y-intercept and slope given in Exercises 4–7.  
-5. y-intercept523; slope51
+5. y-intercept = 3; slope = 1
 7. y-intercept = 2.5 ; slope = 5  
 
 ---
