--- a/HW1207/12_譚玥湄/CH12.02_Q06.md
+++ b/HW1207/12_譚玥湄/CH12.02_Q06.md
@@ -6,9 +6,11 @@ Method of Least Squares Use the data given in Exercises 6–7 (Exercises 17–18
 
 ---
 To construct the ANOVA table for the simple linear regression analysis, we follow these steps:  
-1. Calculate the regression line:  
+1. Calculate the regression line & y-values ($\hat{y}$) and residuals (y− $\hat{y}$).  
    Find the slope ($b_1$) and intercept ($b_0$) using the Method of Least Squares.
 
+   ![image](https://github.com/user-attachments/assets/788f8a23-501f-4d3d-9157-5071347044b5)
+   
    求 b  
    ![image](https://github.com/user-attachments/assets/ba7247c9-50ed-4f73-a9e5-fca4c116ac83)  
    - b = 1.2 
@@ -18,20 +20,16 @@ To construct the ANOVA table for the simple linear regression analysis, we follo
    - $\overline{y}$ =3
    - a = $\overline{y}$ − b1 *  $\overline{x}$ =3−(1.2)(0)=3 
 
-
     The least-squares line  
     - $\hat{y}$ = bx + a  =  $\hat{y}$ = 1.2x + 3
+    -   
 
-3. Compute predicted y-values ($\hat{y}$) and residuals (y− $\hat{y}$).  
-![image](https://github.com/user-attachments/assets/788f8a23-501f-4d3d-9157-5071347044b5)
-
-
-4. Calculate the sums of squares: Total Sum of Squares ($SS_{Total}$), Regression Sum of Squares ($SS_{Regression}$), and Residual Sum of Squares ($SS_{Error}$).!
+2. Calculate the sums of squares: Total Sum of Squares ($SS_{Total}$), Regression Sum of Squares ($SS_{Regression}$), and Residual Sum of Squares ($SS_{Error}$).!
 ![image](https://github.com/user-attachments/assets/c608e140-bcda-4d6a-b6f8-ba83beec2bb3)
 
 - Argument as follows :  
-n = 總樣本數 5   
-k = 組別數 2  
+n = Sample Size =  5   
+k = Group Size =  2  
 $df_{reg}$ = k-1 = 1  
 $df_{error}$ = n-k = 3  
 $df_{total}$ = $df_{reg}$ + $df_{error}$  = 4 
