--- a/HW1207/20_柯伊馨/CH12.02_Q10.md
+++ b/HW1207/20_柯伊馨/CH12.02_Q10.md
@@ -1,6 +1,6 @@
 ![image](https://github.com/user-attachments/assets/40936d3d-3e6e-4cec-81f8-6436c863fa9a)
 
-BMI是自變數X，INCOME是因變數Y
+INCOME是自變數X，BMI是因變數Y
 
 b. 找出描述 BMI 與收入之間關係的最小平方法直線。
 
