--- a/HW1207/08_蕭宇辰/CH12.02_Q16.md
+++ b/HW1207/08_蕭宇辰/CH12.02_Q16.md
@@ -45,9 +45,9 @@ $df_{error}$ = n-k = 3
 
 $df_{total}$ = n-1 = 4
    
-SST = $S_{yy}$ = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 12.5
+SST = $\sum{(y_i-\bar{y})^2}$ =  $\sum{y_i^2}-(\sum{y_i})^2/n$ = 12.5
 
-SSR = $S_{xx}$ = $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 12.25
+SSR = $\sum{(\hat{y_i}-\bar{y})^2}$ = $\sum{\hat{y_i}^2}-(\sum{y_i})^2/n$ =  $S_{xy}^2$ / $S_{xx}$ = 12.25
 
 SSE = SST - SSR = 12.5-12.25 = 0.25
 
