--- a/HW1207/10_蔡佳媛/CH12.02_Q10_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.02_Q10_10_Cathy.md
@@ -9,10 +9,38 @@ BMI is the independent variable, and income is the dependent variable.
 
 ### b. Find the least-squares line relating BMI to income.
 
+| Person       |    1   |    2   |    3   |    4   |    5   |    6   |  Total  | Average |  
+|--------------|--------|--------|--------|--------|--------|--------|---------|---------|  
+| Income ($x$) |   15   |   20.5 |   30   |   40   |   60   |   75   |   240.5 |  40.0833|  
+| BMI    ($y$) |   31.2 |   29.3 |   27.4 |   27.3 |   26.8 |   20   |   162   |  27     |  
+|     $x^2$    |  225   |  420.25|  900   |1,600   |3,600   |5,625   |12,370.25|  
+|     $y^2$    |  973.44|  858.49|  750.76|  745.29|  718.24|  400   | 4,446.22|
+|     $xy$     |  468   |  600.65|  822   |1,092   |1,608   |1,500   | 6,090.65|  
+  
+$S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2$  
+$S_{xx} = 12,370.25 - 6 \times 40.0833^2 = 2,730.224367 \approx 2,730.2244$  
+  
+$S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$  
+$S_{xy} = 6,090.65 - 6 \times 40.0833 \times 27 = -402.8446$  
+  
+$b = \frac{S_{xy}}{S_{xx}} = \frac{-402.8446}{2,730.2244} = 0.1475499963 \approx -0.1475$  
+$a = \bar{y} - b \times \bar{x} = 27 - (-0.1475) \times 40.0833 = 32.91228675 \approx 32.9123$  
 
+Least-squares line: $\hat{y} = a + bx = 32.9123 + (-0.1475)x$  
 
 
 ### c. Construct the ANOVA table for the linear regression.
 
+Total SS = $S_{yy} = \sum{{y_{i}}^2} - n {\bar{y}}^2 = 4,446.22 - 6 \times 27^2 = 72.22$  
 
+SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{-402.8446^2}{2,730.2244} = 59.4397$  
+
+SSE = Total SS - SSR = $72.22 - 59.4397 = 12.7803$
+
+
+|   Source   |      df     |    SS     |    MS     |  
+|------------|-------------|-----------|-----------|  
+| Regression |       1     |**59.4397**|**59.4397**|  
+| Error      | n-2 = **4** |**12.7803**| **3.1951**|  
+| Total      | n-1 = **5** |**72.22**  |  
 
