--- a/HW1207/10_蔡佳媛/CH12.02_Q16_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.02_Q16_10_Cathy.md
@@ -1,2 +1,5 @@
 
 ![image](https://github.com/user-attachments/assets/aa580afe-90e4-4cd3-a45e-b2e7b0b799bd)
+
+
+### a. Find the least-squares line for the data
