--- a/HW1207/10_蔡佳媛/CH12.02_Q16_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.02_Q16_10_Cathy.md
@@ -2,4 +2,14 @@
 ![image](https://github.com/user-attachments/assets/aa580afe-90e4-4cd3-a45e-b2e7b0b799bd)
 
 
-### a. Find the least-squares line for the data
+### a. Find the least-squares line for the data.
+
+
+
+
+### b. Plot the data points and graph the least-squares line as a check on your calculations.
+
+
+
+
+### c. Construct the ANOVA table.
