--- a/HW1207/10_蔡佳媛/CH12.02_Q16_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.02_Q16_10_Cathy.md
@@ -4,12 +4,41 @@
 
 ### a. Find the least-squares line for the data.
 
-
+|       |    1   |    2   |    3   |    4   |    5   |  Total  | Average |  
+|-------|--------|--------|--------|--------|--------|---------|---------|  
+| ($x$) |   -2   |  -2    |    0   |    2   |    2   |     0   |    0    |  
+| ($y$) |    4   |   3.5  |    2   |    0.5 |    0   |    10   |    2    |  
+| $x^2$ |    4   |   4    |    0   |    4   |    4   |    16   |  
+| $y^2$ |   16   |  12.25 |    4   |    0.25|    0   |    32.5 |
+| $xy$  |   -8   |  -7    |    0   |    1   |    0   |   -14   |  
 
 
 ### b. Plot the data points and graph the least-squares line as a check on your calculations.
 
+$S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2$  
+$S_{xx} = 16 - 5 \times 0^2 = 16$  
+  
+$S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y}$  
+$S_{xy} = -14 - 5 \times 0 \times 2 = -14$  
+  
+$b = \frac{S_{xy}}{S_{xx}} = \frac{-14}{16} = -0.875$  
+$a = \bar{y} - b \times \bar{x} = 2 - 0.875 \times 0 = 2$  
 
+Least-squares line: $\hat{y} = a + bx = 2 + (-0.875)x$  
 
 
 ### c. Construct the ANOVA table.
+
+Total SS = $S_{yy} = \sum{{y_{i}}^2} - n {\bar{y}}^2 = 32.5 - 5 \times 2^2 = 12.5$  
+
+SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{-14^2}{16} = 12.25$  
+
+SSE = Total SS - SSR = $12.5 - 12.25 = 0.25$
+
+
+|   Source   |      df     |   SS    |    MS     |  
+|------------|-------------|---------|-----------|  
+| Regression |       1     |**12.25**|  **12.25**|  
+| Error      | n-2 = **3** | **0.25**| **0.0833**|  
+| Total      | n-1 = **4** |**12.5** |  
+
