--- a/HW1207/10_蔡佳媛/CH12.02_Q16_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.02_Q16_10_Cathy.md
@@ -26,6 +26,8 @@ $a = \bar{y} - b \times \bar{x} = 2 - 0.875 \times 0 = 2$
 
 Least-squares line: $\hat{y} = a + bx = 2 + (-0.875)x$  
 
+![image](https://github.com/user-attachments/assets/a9626d3c-1658-4ad1-8f71-aa38e24c0feb)
+
 
 ### c. Construct the ANOVA table.
 
