--- a/HW1207/10_蔡佳媛/CH12.03_Q05_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.03_Q05_10_Cathy.md
@@ -1,2 +1,51 @@
 
 ![image](https://github.com/user-attachments/assets/f7b20023-bc53-4ba6-a887-9df26ca469d7)
+
+|       |    1   |    2   |    3   |    4   |    5   |  Total  | Average |  
+|-------|--------|--------|--------|--------|--------|---------|---------|  
+|  $x$  |   -2   |   -1   |    0   |    1   |    2   |     0   |    0    |  
+|  $y$  |    1   |    1   |    3   |    5   |    5   |    15   |    3    |  
+| $x^2$ |    4   |    1   |    0   |    1   |    4   |    10   |  
+| $y^2$ |    1   |    1   |    9   |   25   |   25   |    61   |  
+| $xy$  |   -2   |   -1   |    0   |    5   |   10   |    12   |  
+
+$S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2 = 10 - 5 \times 0 = 10$  
+
+$S_{yy} = \sum{{y_{i}}^2} - n\bar{y}^2 = 61 - 5 \times 9 = 16$  
+
+$S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y} = 12 - 5 \times 0 \times 3 = 12$  
+
+$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2$  
+$a = \bar{y} - b \times \bar{x} = 3 - 1.2 \times 0 = 3$  
+
+Best fitting line: $\hat{y} = a + bx = 3 + 1.2x$
+
+Total SS = $S_{yy}$ = 16  
+
+SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{12^2}{10} = 14.4$  
+
+SSE = Total SS - SSR = $16 - 14.4 = 1.6$
+
+MSE = $\frac{MSE}{n-2} = \frac{1.6}{3} = 0.5333$
+
+
+### Do the data provide sufficient evidence to indicate that $y$ and $x$ are linearly related? Test using the $t$ statistic at the 1% level of significance. Construct a 99% interval for the slope of the line. What does the phrase "99% confident" mean?  
+
+**t-Test**  
+
+1. $H_{0}: \beta = 0$ vs $H_{1}: \beta \neq 0$  
+2. Set $\alpha$=0.01  
+3. $t_{TEST} = \frac{b-0}{\sqrt{\frac{MSE}{S_{xx}}}} \sim t_{(n-2)}$  
+4. Calculate t* = $\frac{1.2-0}{\sqrt{\frac{0.5333}{10}}} = 5.19631481 \approx 5.1963$  
+5. Find the rejection region or p-value: Reject $H_{0}$ if $t* \lt -5.841$ or $t* \gt 5.841$  
+6. Conclude: $t*$ is between -5.841 and 5.841, does not fall into the rejection region, $H_{0}$ is not rejected.  
+
+![image](https://github.com/user-attachments/assets/a9292416-5c31-4970-854e-2457cf45edfb)  
+
+
+**99% confident**
+
+If the same sampling procedure is repeated many times, 99% of those intervals would contain the true slope.
+
+
+
