--- a/HW1207/12_譚玥湄/CH12.05_Q10.md
+++ b/HW1207/12_譚玥湄/CH12.05_Q10.md
@@ -1,1 +1,6 @@
+CH12.05_Q09-Q10
+![image](https://github.com/user-attachments/assets/8c9127a7-d1d2-4ca1-86d7-68ee9fcb4bac)
 
+
+9. Find a 95% confidence interval for the average value of y when x = 2.
+10. Find a 95% prediction interval for some value of y to be observed in the future when x = 2.
