--- a/HW1207/12_譚玥湄/CH12.05_Q08.md
+++ b/HW1207/12_譚玥湄/CH12.05_Q08.md
@@ -1,1 +1,4 @@
+![image](https://github.com/user-attachments/assets/331e6698-a1db-4cb6-8617-223e74e893a0)
 
+7. Estimate the average value of y when x = 1, using a 90% confidence interval.
+8. Find a 90% prediction interval for some value of y to be observed in the future when x = 1.
