--- a/HW1207/10_蔡佳媛/CH12.03_Q07_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.03_Q07_10_Cathy.md
@@ -1,2 +1,40 @@
 
 ![image](https://github.com/user-attachments/assets/27763e4b-2d9c-4ce7-92cb-206e67472b67)
+
+|       |    1   |    2   |    3   |    4   |    5   |  Total  | Average |  
+|-------|--------|--------|--------|--------|--------|---------|---------|  
+|  $x$  |   -2   |   -1   |    0   |    1   |    2   |     0   |    0    |  
+|  $y$  |    1   |    1   |    3   |    5   |    5   |    15   |    3    |  
+| $x^2$ |    4   |    1   |    0   |    1   |    4   |    10   |  
+| $y^2$ |    1   |    1   |    9   |   25   |   25   |    61   |  
+| $xy$  |   -2   |   -1   |    0   |    5   |   10   |    12   |  
+
+$S_{xx} = \sum{{x_{i}}^2} - n\bar{x}^2 = 10 - 5 \times 0 = 10$  
+
+$S_{yy} = \sum{{y_{i}}^2} - n\bar{y}^2 = 61 - 5 \times 9 = 16$  
+
+$S_{xy} = \sum{x_{i}y_{i}} - n\bar{x}\bar{y} = 12 - 5 \times 0 \times 3 = 12$  
+
+$b = \frac{S_{xy}}{S_{xx}} = \frac{12}{10} = 1.2$  
+
+$a = \bar{y} - b \times \bar{x} = 3 - 1.2 \times 0 = 3$  
+
+Best fitting line: $\hat{y} = a + bx = 3 + 1.2x$
+
+Total SS = $S_{yy}$ = 16  
+
+SSR = $\frac{{S_{xy}}^2}{S_{xx}}$ = $\frac{12^2}{10} = 14.4$  
+
+
+### Calculate the coefficient of determination:  
+
+$R^2 = \frac{SSR}{Total SS}$  
+
+$R^2 = \frac{14.4}{16} = 0.9 = 90%$  
+
+
+### What information does $R^2$ give about the usefulness of the linear model?
+
+The $R^2$ value indicates that 90% of the total variation in $y$ is explained by the linear regression model of $y$ on $x$.  
+
+
