--- a/HW1207/10_蔡佳媛/CH12.03_Q09_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.03_Q09_10_Cathy.md
@@ -1,2 +1,24 @@
 
 ![image](https://github.com/user-attachments/assets/496753a3-ba54-4d69-be25-f6696998955c)
+
+### a. Draw a scatterplot of the number of miles of roadways in the U.S. over time. Describe the pattern that you see?
+
+![image](https://github.com/user-attachments/assets/08b64041-b057-471b-8f29-30406f09825a)
+
+The pattern shows a positive linear trend with a steady rate of increasing miles of roadways over time. 
+
+
+### b. Find the least-aquares line describing these data. Do the data indicate that there is a linear relationship between the number of miles of roadways and the year? Test using a $t$ statistic with $\alpha$=0.05.
+
+
+
+
+### c. Construct the ANOVA table and use the $F$ statistic to answer the question in part b. Verify that the square of the $t$ statistic in part b is equal to $F$.
+
+
+
+
+### d. Calculate $r^2$. What does this value tell you about the effectiveness of the linear regression analysis?
+
+
+
