--- a/HW1207/10_蔡佳媛/CH12.03_Q09_10_Cathy.md
+++ b/HW1207/10_蔡佳媛/CH12.03_Q09_10_Cathy.md
@@ -10,6 +10,7 @@ The pattern shows a positive linear trend with a steady rate of increasing miles
 
 ### b. Find the least-aquares line describing these data. Do the data indicate that there is a linear relationship between the number of miles of roadways and the year? Test using a $t$ statistic with $\alpha$=0.05.
 
+![image](https://github.com/user-attachments/assets/2760c11a-f44c-40c5-8bf2-e17b3971d932)
 
 
 
