--- a/HW1109/19_黃家鈞/CH07.02_Q08.md
+++ b/HW1109/19_黃家鈞/CH07.02_Q08.md
@@ -25,7 +25,7 @@ $N^n = 4^2 = 16$
 
 
 Sample distribution for the sample mean
-| sample mean | probability |
+| sample mean $ \bar x$ | probability |
 |:---------------:|:-------:|
 | $\frac{20}{2}$ | $\frac{1}{16}$ |
 | $\frac{25}{2}$ | $\frac{2}{16}$ |
