--- a/HW1109/19_黃家鈞/CH07.02_Q07.md
+++ b/HW1109/19_黃家鈞/CH07.02_Q07.md
@@ -5,7 +5,7 @@ a.
 $\text{Number of samples} = \binom{N}{n} = \binom{4}{2} = \frac{4!}{2!(4-2)!} = 6$
 
 
-| sample |first select | second select | sample mean $\bar x$ | probability |
+| sample |first select | second select | sample mean $\bar x$ | probability P($\bar{x}$)  |
 |:------:|:-----------:|:-------------:|:-----------------:|:-------------:|
 | 1      | 10          |  15           | $\frac{25}{2}$ | $\frac{1}{6}$ |
 | 2      | 10          |  21           | $\frac{31}{2}$ | $\frac{1}{6}$ |
